--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,29 @@
 development:
-  adapter: mysql2
+  adapter: postgresql
   database: teacup-dev
   pool: 5
   timeout: 5000
-  username: root
+  username: postgres
   password: iamroot
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: postgresql
   database: teacup-test
   pool: 5
   timeout: 5000
-  username: root
+  username: postgres
   password: iamroot
+  host: localhost
 
 production:
-  adapter: mysql2
-  database: teacup
+  adapter: postgresql
+  database: d6ja3bd1ntvkrj
   pool: 5
   timeout: 5000
+  host: ec2-54-235-246-73.compute-1.amazonaws.com
+  username: rjnxnzmzqojoeo
+  password: EQ1Mkc76OqNJyPhFp-9JQx1H39
